<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/nav_btn_selected_color"
        android:scaleType="fitXY"
        android:contentDescription="@null" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:maxWidth="1500dp"
                android:maxHeight="150dp"
                android:src="@drawable/aboutbanner"
                android:scaleType="fitXY"
                android:contentDescription="@null" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/app_name"
            android:textColor="@color/colorTitleBackgGround"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="15dp" />
        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:textColor="@color/colorTitleBackgGround"
            android:textSize="@dimen/font_size_small"
            android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff"
            android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/about_patents"
            android:textColor="@color/color_lightgray"
            android:textSize="@dimen/font_size_normal"
            android:gravity="left" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            android:gravity="center_horizontal">
        <TextView
            android:id="@+id/about_info_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/about_info_email"
            android:textColor="@color/color_darkgray"
            android:textSize="@dimen/font_size_normal"
            android:gravity="right" />

        <TextView
            android:id="@+id/about_support_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:text="@string/about_support_email"
            android:textColor="@color/color_darkgray"
            android:textSize="@dimen/font_size_normal" />
        </LinearLayout>
        <Button
            android:id="@+id/about_close"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/control_with_border"
            android:text="@string/about_close"
            android:textColor="@color/text_color"
            android:visibility="gone" />

    </LinearLayout>

    <ImageView
        android:layout_margin="8dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/app_icon_round"
        android:scaleType="fitXY"
        android:contentDescription="@null" />
</RelativeLayout>
